{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 7,
  "lineage": "f24e523f-a2a1-0152-9bca-58f598aa902f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:internet-gateway/igw-0dc2c566969414a32",
            "id": "igw-0dc2c566969414a32",
            "owner_id": "794038230522",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "main-igw",
              "Project": "TerraformLearning"
            },
            "vpc_id": "vpc-08ec1775111a020b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:route-table/rtb-0b2ff418c12247973",
            "id": "rtb-0b2ff418c12247973",
            "owner_id": "794038230522",
            "propagating_vgws": [],
            "region": "ap-southeast-7",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc2c566969414a32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "public-route-table",
              "Project": "TerraformLearning"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec1775111a020b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "rtb-0b2ff418c12247973",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c4e1f49053d8b3a",
            "region": "ap-southeast-7",
            "route_table_id": "rtb-0b2ff418c12247973",
            "subnet_id": "subnet-029764364d1da4e30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:security-group/sg-0d9272d50a0c70bee",
            "description": "Allow HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9272d50a0c70bee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-security-group",
            "name_prefix": "",
            "owner_id": "794038230522",
            "region": "ap-southeast-7",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "web-sg",
              "Project": "TerraformLearning"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ec1775111a020b2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "sg-0d9272d50a0c70bee",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:subnet/subnet-029764364d1da4e30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-7a",
            "availability_zone_id": "apse7-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029764364d1da4e30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038230522",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "public-subnet",
              "Project": "TerraformLearning"
            },
            "vpc_id": "vpc-08ec1775111a020b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "794038230522",
            "id": "subnet-029764364d1da4e30",
            "region": "ap-southeast-7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-7:794038230522:vpc/vpc-08ec1775111a020b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7a54aae6d740ce7",
            "default_route_table_id": "rtb-0db6fb5829e774990",
            "default_security_group_id": "sg-04ab19be3f1fd278f",
            "dhcp_options_id": "dopt-0033a26adc8acd77d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ec1775111a020b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db6fb5829e774990",
            "owner_id": "794038230522",
            "region": "ap-southeast-7",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "main-vpc",
              "Project": "TerraformLearning"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}